Added date selectors to the tindering
This makes it possible for multiple people to tinder
at the same time, but on different dates, speeding up
the process immensely.
